--- a/src/components/gui-404/gui-404.scss
+++ b/src/components/gui-404/gui-404.scss
@@ -22,3 +22,6 @@
   filter: opacity(0.9) drop-shadow(5px 8px 16px red);
   pointer-events: none;
 }
+button, a {
+  cursor: url('../../assets/images/cursor.webp'),auto;
+}
