--- a/src/global/app.css
+++ b/src/global/app.css
@@ -9,6 +9,7 @@
 */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,1,0');
 
 
 :root {
@@ -21,6 +22,10 @@
 
 }
 
+
+button, a, select {
+  cursor: url('../assets/images/cursor.webp'),auto;
+}
 
 
 [data-color-scheme="dark"] {
