--- a/src/components/message-bubble/message-bubble.scss
+++ b/src/components/message-bubble/message-bubble.scss
@@ -11,7 +11,7 @@
   min-height: 50px;
   display: flex;
   align-items: center;
-  font-family: monospace;
+  font-family: "Consolas", 'lucida console', 'courier new', monospace, 'Noto Color Emoji', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1rem;
 
   &::after {
