--- a/src/components/console-about/console-about.scss
+++ b/src/components/console-about/console-about.scss
@@ -4,7 +4,7 @@
   display: block;
   color: #E8E4ED;
   font-size: 12px;
-  font-family: sans-serif;
+  font-family: sans-serif, 'Noto Color Emoji', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
   * {
     box-sizing: border-box;
